[workspace]
members = ["required-memo", "token-metadata"]

resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
license = "Apache or MIT"
edition = "2021"
publish = false

[workspace.dependencies]
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
solana-program = "2.0.1"
borsh = { version = "1.5.1", features = ["derive", "bytes"] }
spl-associated-token-account = { version = "4.0.0", features = [
    "no-entrypoint",
] }
spl-transfer-hook-interface = { version = "0.7.0" }
spl-token-metadata-interface = "0.4.0"
spl-type-length-value = "0.5.0"
solana-transaction-status = "2.0.2"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
solana-account-decoder = "2.0.3"
spl-tlv-account-resolution = "0.7.0"
spl-discriminator = "0.3.0"
