[workspace]
members = [ "json-api","required-memo", "token-metadata", "visualizer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
license = "Apache or MIT"
publish = false
edition = "2021"

[workspace.dependencies]
fetcher = { path = "./fetcher" }

solana-account-decoder = "2.0.3"
solana-client = "2.0.2"
solana-program = "2.0.1"
solana-sdk = "2.0.2"
solana-transaction-status = "2.0.2"
spl-discriminator = "0.3.0"
spl-tlv-account-resolution = "0.7.0"
spl-token-metadata-interface = "0.4.0"
spl-type-length-value = "0.5.0"

[workspace.dependencies.borsh]
version = "1.5.1"
features = ["derive", "bytes"]

[workspace.dependencies.spl-associated-token-account]
version = "4.0.0"
features = ["no-entrypoint"]

[workspace.dependencies.spl-token-2022]
version = "4.0.0"
features = ["no-entrypoint"]

[workspace.dependencies.spl-transfer-hook-interface]
version = "0.7.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
